@@ -1,0 +1,23 @@
+.Dd November 20, 2025
+.Dt SDN-OPEN 1
+.Os
+.Sh NAME
+.Nm sdn-open
+.Nd run Midnight Commander open configuration externally
+.Sh SYNOPSIS
+.Nm sdn-open
+.Ar path
+.Sh DESCRIPTION
+.Nm
+invokes
+.Xr xdg-open 1
+on the passed filename.
+.Pp
+If it succeeds in finding a
+.Xr mc 1
+.Pa mc.ext.ini
+file, it will first process it, and run any matching command instead.
+.Sh REPORTING BUGS
+Use
+.Lk https://git.janouch.name/p/sdn
+to report bugs, request features, or submit pull requests.
